# AI_Hackathon

./: .gitignore  Git操作指南.md  提交材料整理指南.md  提交材料说明文档.md  检查材料完整性.sh  演示文案.md  题目要求.md
os-agent/: .gitignore  README.md  main.py  pyproject.toml  测试用例文档.md  测试结果报告.md
os-agent/configs/: app.yaml  capabilities.json  guardian.json  llm.yaml  prompts.yaml  voice.yaml
os-agent/data/: learning_memory.md
os-agent/docs/: PRD.md  architecture.md
os-agent/frontend/: index.html  package-lock.json  package.json
os-agent/frontend/src/: App.css  App.tsx
os-agent/src/: __init__.py
os-agent/src/agent/: __init__.py  config.py  core.py  graph.py  learning.py  llm.py  memory.py  models.py  planner.py
os-agent/src/capabilities/: __init__.py  base.py  disk.py  file.py  process.py  registry.py  system.py  user.py
os-agent/src/connector/: __init__.py  local.py  probe.py  remote.py  shell.py
os-agent/src/guardian/: __init__.py  audit.py  confirm.py  detector.py  rules.py
os-agent/src/interface/: __init__.py  api.py  cli.py  server.py  websocket.py
os-agent/src/understanding/: __init__.py  context.py  formatter.py  intent.py
os-agent/src/utils/: __init__.py  helpers.py  logger.py
os-agent/src/voice/: base.py  local_stt.py  local_tts.py  remote_stt.py  remote_tts.py  stt.py
os-agent/tests/unit/: test_agent_core.py  test_api.py  test_capabilities.py  test_cli.py  test_connector.py  test_context.py  test_graph.py  test_guardian.py  test_intent.py  test_learning.py
